# choppa

./: AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml  upstream-watch.yml
choppa/: __init__.py  __main__.py  iterators.py  rule_manager.py  rule_matcher.py  srx_parser.py  structures.py  text_manager.py  utils.py
choppa/data/srx/: LT_COMMIT  PROVENANCE.md
data/srx/: segment_new.srx
docs/: api.md  design.md  draft-closeout-comments.md  history.md
scripts/: benchmark.py  extract_lt_tests.py
tests/: abstract_srx_iterator.py  conftest.py  test_accurate_srx_iterator.py  test_language_map.py  test_languagetool_tokenizers.py  test_properties.py  test_rule_manager.py  test_rule_matcher.py  test_srx_document.py  test_srx_iterator.py  test_srx_iterator_reader.py  test_text_manager.py  test_ukrainian_lt_tokenizer.py  test_utils.py
tests/data/lt/: ar.json  ast.json  ca.json  crh.json  da.json  de.json  en.json  es.json  fa.json  fr.json  it.json  ja.json  lt.json  ml.json  nl.json  pl.json  pt.json  ro.json  ru.json  sk.json  sr.json  sv.json  tl.json  uk.json
